# vrp

./: Cargo.toml
i/: lr1_4_9  lr2_8_6
reader/: Cargo.toml
reader/src/: gh_ll_instance.pest  instance.rs  lib.rs
verifier/: Cargo.toml
verifier-server/: Cargo.toml
verifier-server/src/: data.rs  main.rs
verifier/src/: lib.rs  main.rs  verify.rs
verifier/src/verify/: gh_ll_instance.pest  instance.rs  sintef_solution.pest  solution.rs
