[package]
name = "verifier-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verifier = { path = "../verifier" }
actix-web = "4.3.1"
clap = { version = "4.2.5", features = ["derive"] }
rug = "1.19.2"
walkdir = "2.3.3"
